# uv

./: Cargo.toml
crates/distribution-types/: Cargo.toml
crates/distribution-types/src/: cached.rs  dependency_metadata.rs  lib.rs  resolution.rs  traits.rs
crates/pypi-types/: Cargo.toml
crates/pypi-types/src/: metadata.rs  requirement.rs
crates/report-types/: Cargo.toml
crates/report-types/src/: lib.rs  report.rs
crates/report_types/: Cargo.toml
crates/report_types/src/: report.rs
crates/uv/: Cargo.toml
crates/uv-distribution/src/metadata/: mod.rs
crates/uv-distribution/src/source/: mod.rs
crates/uv-metadata/src/: lib.rs
crates/uv-resolver/src/lock/: mod.rs
crates/uv-resolver/src/resolution/: graph.rs  mod.rs
crates/uv/src/commands/pip/: operations.rs
